--- a/index.html
+++ b/index.html
@@ -212,15 +212,19 @@
             <svg id="waterDrop" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 117.21 117.21">
               <defs>
                 <style>
+                  #waterDrop:hover .cls-1 { opacity: 0;}
+
                   .cls-1 {
                     fill: #a2cdde;
+                    transition: opacity ease 1.5s;
+                    transform-origin: center;
                   }
             
                   .cls-2 {
                     fill: #e5cad3;
                     stroke: #151616;
                     stroke-miterlimit: 10;
-                    stroke-width: 4px;
+                    stroke-width: 3px;
                   }
                 </style>
               </defs>
